# Orthodontics

./: .clang-tidy  CMakeLists.txt
python/: CurvaturesAdjustEdges.py  curvature.py
src/: QBridgeVtk.cpp  QBridgeVtk.hpp  QImplicitPlaneControllerWidget.cpp  QImplicitPlaneControllerWidget.hpp  QImplicitPlaneControllerWidget.ui  QOrthodonticsContourControllerWidget.cpp  QOrthodonticsContourControllerWidget.hpp  QOrthodonticsContourControllerWidget.ui  QOrthodonticsFillHolesControllerWidget.cpp  QOrthodonticsFillHolesControllerWidget.hpp  QOrthodonticsFillHolesControllerWidget.ui  QOrthodonticsGingivalLineGenerateControllerWidget.cpp  QOrthodonticsGingivalLineGenerateControllerWidget.hpp  QOrthodonticsGingivalLineGenerateControllerWidget.ui  QOrthodonticsImplicitPlaneControllerWidget.cpp  QOrthodonticsImplicitPlaneControllerWidget.hpp  QOrthodonticsImplicitPlaneControllerWidget.ui  QOrthodonticsViewWidget.cpp  QOrthodonticsViewWidget.hpp  QOrthodonticsWidget.cpp  QOrthodonticsWidget.hpp  QOrthodonticsWidget.ui  QSaveLoadUtil.cpp  QSaveLoadUtil.hpp  vtkOrthodonticsContourExtractionFilter.cpp  vtkOrthodonticsContourExtractionFilter.hpp  vtkOrthodonticsContourGenerateFilter.cpp  vtkOrthodonticsContourGenerateFilter.hpp  vtkOrthodonticsContourWidget.cpp  vtkOrthodonticsContourWidget.hpp  vtkOrthodonticsFACCSeedWidget.cpp  vtkOrthodonticsFACCSeedWidget.hpp  vtkOrthodonticsImplicitPlaneWidget.cpp  vtkOrthodonticsImplicitPlaneWidget.hpp  vtkOrthodonticsPCACurvatureNormalEstimation.cpp  vtkOrthodonticsPCACurvatureNormalEstimation.hpp  vtkOrthodonticsPCAFilter.cpp  vtkOrthodonticsPCAFilter.hpp  vtkOrthodonticsView.cpp  vtkOrthodonticsView.hpp  (+2 more)
src/main/: main.cpp
src/pcl/: CMakeLists.txt  main.cpp
